--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.16",
     "tailwindcss": "^4.1.16"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pguignant-ux/Green_tailwind.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pguignant-ux/Green_tailwind/issues"
+  },
+  "homepage": "https://github.com/pguignant-ux/Green_tailwind#readme"
 }
